# final_thesis_project

./: .gitignore  README.md  arm_model.m  closed_model_combined.m  closed_model_kine.m  controls.m  data_generation.m  data_generation.m~  data_generation_combined.m  model.m  modelPD.m  model_drive.m  model_steer.m  open_model_combined.m  pursuit_kinematic_model.m  pursuit_test.m  pursuit_test_neg.m  simple_arm.m  steer_model.m  trajdsin.m  trajsin.m  update_pose.m
POSIX/remote/: CMakeLists.txt  remote.cpp
POSIX/serial_comm/: CMakeLists.txt  main.cpp  sercom.cpp
POSIX/serial_remote_controller/: CMakeLists.txt
POSIX/serial_remote_keypad/: CMakeLists.txt  main.cpp  sercom.h
esp32/drive_servo_test/: drive_servo_test.ino
esp32/freeRTOS_blink/: freeRTOS_blink.ino
esp32/imu_example/: imu_example.ino
esp32/main/: main.ino
